--- a/Login.html
+++ b/Login.html
@@ -35,7 +35,7 @@
 	
 	 <input type="submit" value="Log in"  name="login">
    </form>
-   <p>Not a user?<a href="Registration.php">register here</p> 
+   <p>Not a user?<a href="Registration.html">register here</p> 
 </div>
 </body>
 </html>
