--- a/Registration.html
+++ b/Registration.html
@@ -44,7 +44,7 @@
 	 <br />
 	 <input type="submit" value="Register" name="register" >
    </form>
-   <p>already a user?<a href="Login.php">log in</p> 
+   <p>already a user?<a href="Login.html">log in</p> 
 </div>
 </body>
 </html>
