--- a/acceptedinv.html
+++ b/acceptedinv.html
@@ -5,7 +5,7 @@ if(!isset($_SESSION['username']))
 
 {
     
-	header("location:login.php");
+	header("location:login.html");
 }
 
    
@@ -66,7 +66,7 @@ if(!isset($_SESSION['username']))
 	 
   
   }
-  echo "<br /><a href='index.php'>go to homepage</a>"; 
+  echo "<br /><a href='index.html'>go to homepage</a>"; 
   ?> 
    
  
