--- a/events.html
+++ b/events.html
@@ -5,7 +5,7 @@ if(!isset($_SESSION['username']))
 
 {
     
-	header("location:login.php");
+	header("location:login.html");
 }
  
 ?>
@@ -65,7 +65,7 @@ if(!isset($_SESSION['username']))
 
  }
   
-  echo "<br /><a href='index.php'>go to homepage</a>"; 
+  echo "<br /><a href='index.html'>go to homepage</a>"; 
  
  
 ?>
