--- a/send.html
+++ b/send.html
@@ -5,7 +5,7 @@ if(!isset($_SESSION['username']))
 
 {
     
-	header("location:login.php");
+	header("location:login.html");
 }
 
 ?>
@@ -51,7 +51,7 @@ if(!isset($_SESSION['username']))
 	echo "<br/>";
 }	
   echo "</table>";	
-  echo "<br /><a href='index.php'>go to homepage</a>"; 
+  echo "<br /><a href='index.html'>go to homepage</a>"; 
 ?>	
 
 </body>
