--- a/view.html
+++ b/view.html
@@ -1,11 +1,11 @@
 <?php 
 
-include 'insert.php';
+include 'insert.html';
 if(!isset($_SESSION['username']))
 
 {
     
-	header("location:login.php");
+	header("location:login.html");
 }
 
  ?>  
@@ -88,7 +88,7 @@ if(!isset($_SESSION['username']))
   }
  }
  
- echo "<br /><a href='index.php'>go to homepage</a>"; 
+ echo "<br /><a href='index.html'>go to homepage</a>"; 
 ?> 
   
  
