--- a/INV.html
+++ b/INV.html
@@ -1,5 +1,5 @@
 <?php
-include 'insert.php';
+include 'insert.html';
 if(!isset($_SESSION['username']))
 
 {
@@ -30,7 +30,7 @@ if(!isset($_SESSION['username']))
   <body >
      <h2>Create a new invitation </h2>
 	 <p>________________________</p>
-     <form  action="insert.php" method="post">
+     <form  action="insert.html" method="post">
     
 	 <label for="date">Date:</label>
 	
