--- a/Login.html
+++ b/Login.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div class="container" >
-   <form  action="insert.php" method="post">
+   <form  action="insert.html" method="post">
         
 	 <label for="username">Username</label>
 	 <br />
