--- a/Registration.html
+++ b/Registration.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <div class="container">
-   <form  action="insert.php" method="post">
+   <form  action="insert.html" method="post">
      
      <label for="username">Username:</label>
 	 <br />
