--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
    <P>click here to see <a href="acceptedinv.html">accepted Invitations </a>by you</p>
    
    <br />
-   <button><a href="index.php?logout='1'">logout</a></button>
+   <button><a href="index.html?logout='1'">logout</a></button>
    </div>
  </body>
 </html> 
